--- a/1.notesJS/20.CanvasAPI.md
+++ b/1.notesJS/20.CanvasAPI.md
@@ -23,7 +23,7 @@ on your page:
 ```
 
 
-### drawing on a canvas requires series of steps:
+### drawing on a canvas requires series of steps:  :shoe:
 - 1. get an instance of canvas element
 - 2. get drawing context from getContext()
 - 3. if result of getContext() not null, you have drawing API 
@@ -47,7 +47,7 @@ on your page:
 ```
 
 
-## 2d drawing api (pretty comprehensive)
+## 2d drawing api (pretty comprehensive)   :shoe::shoe:
 Broken up into 3 groups
 1. has to do with shapes (rect,lines,arcs,paths,colors,styles)
 2. has to do with how things are drawing (composing, patterns,gradients,
@@ -56,7 +56,7 @@ Broken up into 3 groups
 
 
 
-ex: drawing example
+ex: drawing example   :pencil:
 
 ```
      window.onload = function() {
@@ -82,20 +82,20 @@ ex: drawing example
 ```
 
 
-## canvas 2d drawing context provides some global properties that affect how object are stroked and filled.    
-3 properties:
+## canvas 2d drawing context provides some global properties that affect how object are stroked and filled.   :pencil: 
+3 properties:  :steps:
 - fillStyle (when filling a shape) defaults black
 - strokeStyle(set to color gradient or a pattern)  defaults black
 - lineWidth property (width of the imaginary pen the canvas uses when drawing 
   a line) defaults 1
 
 
-### two-step process to draw with colors and styles:
+### two-step process to draw with colors and styles:   :mans_shoe:
 1. set the fill and stroke styles and line width
 2. call a drawing operation that creates a shape
 
 
-## drawing basic shapes: rectangles and lines
+## drawing basic shapes: rectangles and lines  :pencil2:
 - rectangles are the only primitive shape supported by canvas
 - all rectangle-drawing operations take a starting point of the upper-left
   corner fo the rectangle(x,y) and a width and height value(w,h)
@@ -103,7 +103,7 @@ ex: drawing example
 
 
 
-### drawing basic shapes
+### drawing basic shapes  :crescent_moon:
  ---
 Rectangle function: description
 clearRect(x,y,w,h): erases given rectangle - makes it fully transparent
@@ -111,7 +111,7 @@ strokeRect(x,y,w,h): outlines a rect with current stroke.
 fillRect(x,y,w,h): fills a given rectangle with current fillStyle 
 ---
 
-### drawing basic shapes
+### drawing basic shapes  :fish_cake:
 - lines can be created using a variety of settings for they join and end
  ---
 moveTo(x,y): moves the pen to the given coordinates - does not draw anythin
@@ -152,7 +152,7 @@ stroke(): collects all path commands are draws them
 
 
 
-## drawing lines of varying widths
+## drawing lines of varying widths  :memo:
 
 var canvas = document.getElementById('canvas');
 if(canvas.getContext) {
@@ -179,7 +179,7 @@ if(canvas.getContext) {
 
 
 
-## understanding canvas state
+## understanding canvas state  :school:
 - each context maintains a drawing state
 - you can save the current state and restore previous one
 - the state can be pushed onto a stack and saved states
@@ -188,21 +188,21 @@ if(canvas.getContext) {
     + current transformation matrix
     + current clipping region
 
-### you can save and restore canvas state (in case for whatever reasons u wanna do that)
+### you can save and restore canvas state (in case for whatever reasons u wanna do that)  :part_alternation_mark:
 
 - save() and restore()
 - call context.save();
 - call context.restore();
 
 
-## rendering text on canvas
+## rendering text on canvas  :busstop:
 - drawing text similar to drawing any other path
 - text can be stroked or filled using fillStyle and strokeStyle
 -
 
 
 
-### rendering text on canvas
+### rendering text on canvas  :busstop:
  ---
 font: anything u would normally put into a font CSS
 text-align: "start"(default), "end", "left", "right", "center"
@@ -211,7 +211,7 @@ fillText(txt,x,y,[maxW]): render text string at x,y no wider than maxW
 strokeText(txt,x,y,[maxW]): render same same same
 ---
 
-### transformations
+### transformations  :construction:
 - provide a way to affect how objects are drawn on canvas to achieve effects
 - 3 basic transformations provided by canvas:
     + translate
@@ -221,7 +221,7 @@ strokeText(txt,x,y,[maxW]): render same same same
 
 
 
-### translate
+### translate  :construction:
  ---
 translate(x,y): moves origin by the amounts x and y
 
@@ -267,9 +267,9 @@ translate(x,y): moves origin by the amounts x and y
 
 
 
-### scale transformation
+### scale transformation  :construction:
 
-### scale
+
  ---
 scale(x,y): scale drawing operation by multiples x and y
 
@@ -325,14 +325,14 @@ ex.
 
 
 
-### rotate transformations
+### rotate transformations  :rotating_light:
 - rotate() transform causes subsequent drawing operations to be rotated by a 
   given angle(in radians, not degrees)
 - rotation happens around current origin. Not an objects center you're about
   to draw (translate for that).
 
 
-### rotate transform - takes one argument
+### rotate transform - takes one argument   :rotating_light:
  ---
 rotate(angle): rotate subsequent drawing operations by given angle
 
@@ -380,7 +380,7 @@ rotate(angle): rotate subsequent drawing operations by given angle
 
 
 
-## real rotation 
+## real rotation  :dart:
 - this here i must say it's my favorite so far.
 - first translate my way to the center of the canvas
 - apply radian PI secret recipe
@@ -431,7 +431,7 @@ rotate(angle): rotate subsequent drawing operations by given angle
 
 
 
-## Accessing Raw Pixel data
+## Accessing Raw Pixel data  :space_invader:
 - canvas provides access to individual pixel data as an array of bytes
 - this data then can be manipulated and then put back into the canvas
 - each row in an image is composed of 4-byte wide pixels
@@ -445,7 +445,7 @@ rotate(angle): rotate subsequent drawing operations by given angle
 
 
 
-### functions to access Image Data
+### functions to access Image Data  :golf:
  ---
 width,height: width,height of canvas
 data:single dimension array of raw pixel data
@@ -457,5 +457,5 @@ into an image.If the dirty rectangle is supplied, then only the bits inside that
 
 
 
-exP
+:100:
 
