--- a/1.notesJS/20.CanvasAPI.md
+++ b/1.notesJS/20.CanvasAPI.md
@@ -446,14 +446,13 @@ rotate(angle): rotate subsequent drawing operations by given angle
 
 
 ### functions to access Image Data  :golf:
- ---
-width,height: width,height of canvas
-data:single dimension array of raw pixel data
-createImageData(sw,sh):creates a new image data width width sw and height sh
-createImageData(imgData):creates a new image data from existing one
-getImageData(imgData,dx,dy,[dirtyDx,dirtyDy,dirtyW,dirtyH]):puts modified data
-into an image.If the dirty rectangle is supplied, then only the bits inside that rectangle are updated.
----
+ ---       
+width,height: width,height of canvas       
+data:single dimension array of raw pixel data       
+createImageData(sw,sh):creates a new image data width width sw and height sh     
+createImageData(imgData):creates a new image data from existing one.          
+getImageData (imgData,dx,dy,[dirtyDx,dirtyDy,dirtyW,dirtyH]):puts modified data into an image. If the dirty rectangle is supplied, then only the bits inside that rectangle are updated.       
+---       
 
 
 
