--- a/1.notesJS/20.CanvasAPI.md
+++ b/1.notesJS/20.CanvasAPI.md
@@ -445,8 +445,7 @@ rotate(angle): rotate subsequent drawing operations by given angle
 
 
 
-### functions to access Image Data  :golf:
----       
+## functions to access Image Data  :golf:       
 - **width,height**:   width,height of canvas            
 - **data**:   single dimension array of raw pixel data            
 - **createImageData(sw,sh)**:   creates a new image data width width sw and height sh          
