--- a/1.notesJS/20.CanvasAPI.md
+++ b/1.notesJS/20.CanvasAPI.md
@@ -1,6 +1,6 @@
 ## canvas api  :ear:
 
-ex: call event
+ex: call event  :dash:
 
 ```
 window.onload = function() {
@@ -13,7 +13,7 @@ window.onload = function() {
 }
 ```
 
-on your page:
+on your page:  :dash:
 
 ```
 <canvas id="canvaso" width="600" height="600">
@@ -23,10 +23,10 @@ on your page:
 ```
 
 
-### drawing on a canvas requires series of steps:  :shoe:
-- 1. get an instance of canvas element
-- 2. get drawing context from getContext()
-- 3. if result of getContext() not null, you have drawing API 
+## drawing on a canvas requires series of steps:  :shoe:
+1. get an instance of canvas element
+2. get drawing context from getContext()
+3. if result of getContext() not null, you have drawing API 
 
 
 ```
