--- a/1.notesJS/20.CanvasAPI.md
+++ b/1.notesJS/20.CanvasAPI.md
@@ -48,15 +48,15 @@ on your page:  :dash:
 
 
 ## 2d drawing api (pretty comprehensive)   :shoe::shoe:
-Broken up into 3 groups
-1. has to do with shapes (rect,lines,arcs,paths,colors,styles)
-2. has to do with how things are drawing (composing, patterns,gradients,
-   shadows, clipping paths)
-3. last you got transforms, images, video, raw pixels
+#### Broken up into 3 groups :family:           
+1.  has to do with shapes (rect,lines,arcs,paths,colors,styles)       
+2.  has to do with how things are drawing (composing, patterns,gradients,
+    shadows, clipping paths)          
+3.  last you got transforms, images, video, raw pixels        
 
 
 
-ex: drawing example   :pencil:
+ex: drawing example   :art:
 
 ```
      window.onload = function() {
@@ -83,11 +83,11 @@ ex: drawing example   :pencil:
 
 
 ## canvas 2d drawing context provides some global properties that affect how object are stroked and filled.   :pencil: 
-3 properties:  :steps:
-- fillStyle (when filling a shape) defaults black
-- strokeStyle(set to color gradient or a pattern)  defaults black
-- lineWidth property (width of the imaginary pen the canvas uses when drawing 
-  a line) defaults 1
+#### 3 properties:  :steps:
+1.  fillStyle (when filling a shape) defaults black    
+2.  strokeStyle(set to color gradient or a pattern)  defaults black      
+3.  lineWidth property (width of the imaginary pen the canvas uses when drawing     
+    a line) defaults 1     
 
 
 ### two-step process to draw with colors and styles:   :mans_shoe:
