--- a/1.notesJS/20.CanvasAPI.md
+++ b/1.notesJS/20.CanvasAPI.md
@@ -82,15 +82,15 @@ ex: drawing example   :art:
 ```
 
 
-## canvas 2d drawing context provides some global properties that affect how object are stroked and filled.   :pencil: 
-#### 3 properties:  :steps:
-1.  fillStyle (when filling a shape) defaults black    
-2.  strokeStyle(set to color gradient or a pattern)  defaults black      
+## canvas 2d drawing context provides some global properties that affect how objects are stroked and filled.   :bomb:   
+#### 3 properties:  :wrench:
+1.  fillStyle (when filling a shape) defaults black              
+2.  strokeStyle(set to color gradient or a pattern)  defaults black             
 3.  lineWidth property (width of the imaginary pen the canvas uses when drawing     
-    a line) defaults 1     
+    a line) defaults 1          
 
 
-### two-step process to draw with colors and styles:   :mans_shoe:
+## two-step process to draw with colors and styles:   :mans_shoe:
 1. set the fill and stroke styles and line width
 2. call a drawing operation that creates a shape
 
@@ -101,15 +101,39 @@ ex: drawing example   :art:
   corner fo the rectangle(x,y) and a width and height value(w,h)
 
 
+| SVN command     | Git command | Git behavior                                                          |
+| ---             | ---         | ---                                                                   |
+| `status`        | `status`    | Report the state of working tree                                      |
+| `add`           | `add`       | Required for each path before making a commit                         |
+| `commit`        | `commit`     | Store prepared changes in local revision history                      |
+| `rm`, `delete`   | `rm`        | Prepare paths for deletion in next commit                             |
+| `move`          | `mv`        | Prepare relocated content for next commit                             |
+| `checkout`      | `clone`     | Acquire the entire history of a project locally for the first tim     |
+|                 | `branch`    | Create local context for commits                                      |
+|                 | `merge`     | Join branch histories and changes to working tree                     |
+|                 | `log`       | No network required                                                   |
+|                 | `push`      | Upload commit history to GitHub/centralized Git host                  |
+|                 | `pull`      | Download and integrate GitHub repository history with local on        |
+|                 | `fetch`     | Download GitHub repository history with no other action               |
 
 
-### drawing basic shapes  :crescent_moon:
- ---
-Rectangle function: description
-clearRect(x,y,w,h): erases given rectangle - makes it fully transparent
-strokeRect(x,y,w,h): outlines a rect with current stroke.
-fillRect(x,y,w,h): fills a given rectangle with current fillStyle 
----
+
+
+
+
+
+
+
+
+
+
+
+## drawing basic shapes  :crescent_moon:
+- Rectangle function: description
+- clearRect(x,y,w,h): erases given rectangle - makes it fully transparent
+- strokeRect(x,y,w,h): outlines a rect with current stroke.
+- fillRect(x,y,w,h): fills a given rectangle with current fillStyle 
+
 
 ### drawing basic shapes  :fish_cake:
 - lines can be created using a variety of settings for they join and end
