--- a/1.notesJS/20.CanvasAPI.md
+++ b/1.notesJS/20.CanvasAPI.md
@@ -101,38 +101,25 @@ ex: drawing example   :art:
   corner fo the rectangle(x,y) and a width and height value(w,h)
 
 
-| SVN command     | Git command | Git behavior                                                          |
-| ---             | ---         | ---                                                                   |
-| `status`        | `status`    | Report the state of working tree                                      |
-| `add`           | `add`       | Required for each path before making a commit                         |
-| `commit`        | `commit`     | Store prepared changes in local revision history                      |
-| `rm`, `delete`   | `rm`        | Prepare paths for deletion in next commit                             |
-| `move`          | `mv`        | Prepare relocated content for next commit                             |
-| `checkout`      | `clone`     | Acquire the entire history of a project locally for the first tim     |
-|                 | `branch`    | Create local context for commits                                      |
-|                 | `merge`     | Join branch histories and changes to working tree                     |
-|                 | `log`       | No network required                                                   |
-|                 | `push`      | Upload commit history to GitHub/centralized Git host                  |
-|                 | `pull`      | Download and integrate GitHub repository history with local on        |
-|                 | `fetch`     | Download GitHub repository history with no other action               |
-
-
-
-
-
-
-
-
-
-
-
-
-
 ## drawing basic shapes  :crescent_moon:
-- Rectangle function: description
-- clearRect(x,y,w,h): erases given rectangle - makes it fully transparent
-- strokeRect(x,y,w,h): outlines a rect with current stroke.
-- fillRect(x,y,w,h): fills a given rectangle with current fillStyle 
+| Shapes		  | define  		                                                  |
+| ---         	          | ---                                                                   |
+| `Rectangle function`    | description                                                           |
+| `clearRect(x,y,w,h)`    | erases given rectangle - makes it fully transparent                   |
+| `strokeRect(x,y,w,h)`   | outlines a rect with current stroke                                   |
+| `fillRect()x,y,w,h`     | fills a given rectangle with current fillStyle			  |
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 ### drawing basic shapes  :fish_cake:
