--- a/1.notesJS/20.CanvasAPI.md
+++ b/1.notesJS/20.CanvasAPI.md
@@ -100,8 +100,8 @@ ex: drawing example   :art:
 - all rectangle-drawing operations take a starting point of the upper-left
   corner fo the rectangle(x,y) and a width and height value(w,h)
 
-
-## drawing basic shapes  :crescent_moon:
+<br/>
+## drawing basic shapes  :triangular_ruler:
 | Shapes		  | define  		                                                  |
 | ---         	          | ---                                                                   |
 | `Rectangle function`    | description                                                           |
@@ -110,29 +110,21 @@ ex: drawing example   :art:
 | `fillRect()x,y,w,h`     | fills a given rectangle with current fillStyle			  |
 
 
-
-
-
-
-
-
-
-
-
-
-
+<br/>
 
 ### drawing basic shapes  :fish_cake:
-- lines can be created using a variety of settings for they join and end
- ---
-moveTo(x,y): moves the pen to the given coordinates - does not draw anythin
-lineTo(x,y): draws a line from current position to new point - does draw
-lineWidth: determines pixel lineWidth -how line looks on screen
-lineCap: how lines ending are drawn -same
-lineJoin:how lines join together
-beginPath(): begins a new set of path-drawing operations
-stroke(): collects all path commands are draws them
----
+> lines can be created using a variety of settings for they join and end
+
+| Shapes		  | define  		                                                  |
+| ---         	          | ---                                                                   |
+| `moveTo(x,y)`           | moves the pen to the given coordinates - does not draw anything       |                   |`lineTo(x,y)`            | draws a line from current position to new point - does draw           |
+| `lineWidth`             | determines pixel lineWidth -how line looks on screen                  |
+| `lineCap`               | how lines ending are drawn -same 		                          |
+|`lineJoin`               | how lines join together                                               |
+| `beginPath()`           | begins a new set of path-drawing operations                           |
+| `stroke`                | collects all path commands are draws them		                  |
+
+ 
 
 
 ```
