--- a/1.notesJS/20.CanvasAPI.md
+++ b/1.notesJS/20.CanvasAPI.md
@@ -112,7 +112,7 @@ ex: drawing example   :art:
 
 <br/>
 
-### drawing basic shapes  :fish_cake:
+### drawing basic shapes  :nut_and_bolt:
 > lines can be created using a variety of settings for they join and end
 
 | Shapes		  | define  		                                                  |
