--- a/1.notesJS/20.CanvasAPI.md
+++ b/1.notesJS/20.CanvasAPI.md
@@ -17,8 +17,8 @@ on your page:  :dash:
 
 ```
 <canvas id="canvaso" width="600" height="600">
-	//will only display on older browser that don't support canvas
-	update your browser lazy bastard!!
+	//will only display on older browsers that don't support canvas
+	update your browser!
 </canvas>
 ```
 
