--- a/1.notesJS/20.CanvasAPI.md
+++ b/1.notesJS/20.CanvasAPI.md
@@ -84,7 +84,7 @@ ex: drawing example   :art:
 
 ## canvas 2d drawing context provides some global properties that affect how objects are stroked and filled.   :bomb:   
 #### 3 properties:  :wrench:
-1.  fillStyle (when filling a shape) defaults black              
+1.  `fillStyle` (when filling a shape) defaults black              
 2.  strokeStyle(set to color gradient or a pattern)  defaults black             
 3.  lineWidth property (width of the imaginary pen the canvas uses when drawing     
     a line) defaults 1          
