--- a/1.notesJS/16.HandlingEvents.md
+++ b/1.notesJS/16.HandlingEvents.md
@@ -1,10 +1,20 @@
 ## handling Events
 
+:zap: if you wanna to take care of a task when something
+  happens, you have to captured that event, which is
+  done through event registration - doing something
+  when an event takes place      
+  
 :zap: events handlers are basically functions that you bind using
 specific methods to certain events that happen in the browser.
-- these events could be trigger by something that happened
-  in the browser, like page loading
-- user interaction, like user click something
+
+
+### ex events:
+- when page loads in a browser
+- user moves the mouse over a link
+- when a video finished loading
+- when a form is submitted
+- user clicked something, keyup etc
 
 
 ### :cactus: <kbd>option I</kbd> placing event straight on html
@@ -104,6 +114,82 @@ to **change**.
     }
 
 ````
+<hr>
+<br>
+## difference between these 2 types of Event Listener:  :alien:
+
+### number 2 allows you to check for multiple events with a single call.
+-  Is called **Event Propagation**  :mushroom:
+-  `only problem`: **not** supported by **IE8** and older browser - 
+-  `Still` the **Best Way**  :mushroom:
+
+
+1. `Looks like an inline onclick event`  :beetle:
+    document.getElementById('id').onclick = function() { 
+        document.write('you did it');
+    }
+
+2. `addEventListener()`  :beetle:
+    looks like dot notation because:
+        - asks for type of event,
+        - a function
+        - true or false (propagation type)
+    ex.
+```    
+    document.getElementById('id').addEventListener('click', function() {
+        console.log('clicked');
+    }, false);
+```
+
+
+### IE8 uses `attachEvent()`  :alien:
+    ex.
+        document.getElementById('id').attachEvent('onclick',function() {
+            console.log('clicked');
+        });
+
+> and it doesn't event propagation.  :watch:
+
+
+## once you capture an event  :alien:
+- you received an event **object** back from the browser
+
+ex.
+```
+    document.getElementById('id').addEventListener('click', function(e) {
+        console.log(e);
+
+    }, false);
+```
+
+### event info: :alien:
+- event type  //ex click event  :movie_camera:
+- timestamp  //time at which the event happened
+- defaultPrevented  //preventing default behavior from happening
+
+### target info :alien:
+- currentTarget   //element event was assigned to
+- target  //element event originated from
+- srcElement   //actual element that fired the event
+- fromElement //last 2 related they deal with mouse over and mouse out events
+- toElement   //llast 2 related they deal with mouse over and mouse out events\
+
+### coordinate info  :alien:
+- screen X,Y  //position relative to the user's screen  :chestnut:
+- client X,Y  //position relative to the window
+- page X,Y     //events relative to the HTML document
+- offset X,Y   //X,Y positions relative to the element that fired the events
+
+## event propagation  :alien:
+- lets you have a single element capture all the events of its children element
+- the reason to use **addEventListener**
+
+
+
+
+
+
+
 ### :loudspeaker: DOMContentLoaded `event`
 - part of the life cycle event of the page
 - lets you assign events to elements once they load,
