--- a/1.notesJS/10.Constructors_n_Prototypes.md
+++ b/1.notesJS/10.Constructors_n_Prototypes.md
@@ -146,5 +146,81 @@ method function for a particular property with every
 new instance you create.  :white_flower:
 
 
+#### testing with typeof, instanceof, constructor
 
+```
+    function Ninja(){}
+    var ninja = new Ninja();
+```
+
+ console.log(typeof ninja);
+ console.log(ninja instanceof Ninja);
+ console.log(ninja.constructor);
+ 
+ 
+ #### you can create a new instance from another instance
+ Here we use the constructor property of the created instance to construct a second instance:
+ 
+ ```
+    function Ninja(){}
+    var ninja = new Ninja();
+    
+    var ninja2 = new ninja.constructor();
+```
+ 
+ ### This one is important
+ 
+ 
+ ```
+   //Person constructor
+   function Person() {
+   
+   }
+   
+   //Creates dance via prototype
+   Person.prototype.dance = function() {
+   
+   };
+   
+   //Ninja constructor or a possibly subclass
+   function Ninja() {
+   
+   }
+   
+   //here i'm making/ copying dance function from Person cause i want to inherit Person properties
+   // and it's not bad but isn't inheritance
+   
+   Ninja.prototype = {
+        
+        dance: Person.prototype.dance
+   
+   };
+   
+   var ninja = new Ninja();
+   
+   
+   
+   
+   
+```
+ 
+ #### But what we're looking for is Prototype Chain. So that a ninja can be a person etc.
+ #### So best technique for creating a prototype chain is to use an instance of an object as the other objects prototype
+ 
+ - This makes a ninja a person
+ 
+ Ex:  Ninja.prototype = new Person();           
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
  
