--- a/1.notesJS/10.Constructors_n_Prototypes.md
+++ b/1.notesJS/10.Constructors_n_Prototypes.md
@@ -158,7 +158,7 @@ new instance you create.  :white_flower:
  console.log(ninja.constructor);
  
  
- #### you can create a new instance from another instance
+#### you can create a new instance from another instance :rage:
  Here we use the constructor property of the created instance to construct a second instance:
  
  ```
@@ -168,7 +168,7 @@ new instance you create.  :white_flower:
     var ninja2 = new ninja.constructor();
 ```
  
- ### This one is important
+### This one is important  :rage:
  
  
  ```
