--- a/1.notesJS/10.Constructors_n_Prototypes.md
+++ b/1.notesJS/10.Constructors_n_Prototypes.md
@@ -146,16 +146,16 @@ method function for a particular property with every
 new instance you create.  :white_flower:
 
 
-#### testing with typeof, instanceof, constructor
+### testing with typeof, instanceof, constructor  :guardsman:
 
 ```
     function Ninja(){}
     var ninja = new Ninja();
 ```
 
- console.log(typeof ninja);
- console.log(ninja instanceof Ninja);
- console.log(ninja.constructor);
+ console.log(typeof ninja);         
+ console.log(ninja instanceof Ninja);        
+ console.log(ninja.constructor);        
  
  
 #### you can create a new instance from another instance :rage:
@@ -207,7 +207,7 @@ new instance you create.  :white_flower:
  #### But what we're looking for is Prototype Chain. So that a ninja can be a person etc.
  #### So best technique for creating a prototype chain is to use an instance of an object as the other objects prototype
  
- - This makes a ninja a person
+ - This makes a ninja a person     
  
  Ex:  Ninja.prototype = new Person();           
  
