--- a/1.notesJS/10.Constructors_n_Prototypes.md
+++ b/1.notesJS/10.Constructors_n_Prototypes.md
@@ -146,7 +146,7 @@ method function for a particular property with every
 new instance you create.  :white_flower:
 
 
-### testing with typeof, instanceof, constructor  :guardsman:
+### :hotsprings: testing with typeof, instanceof, constructor  :guardsman:
 
 ```
     function Ninja(){}
@@ -168,7 +168,7 @@ new instance you create.  :white_flower:
     var ninja2 = new ninja.constructor();
 ```
  
-### This one is important  :rage:
+### :hotsprings: This one is important  :rage:
  
  
  ```
