--- a/1.notesJS/10.Constructors_n_Prototypes.md
+++ b/1.notesJS/10.Constructors_n_Prototypes.md
@@ -159,7 +159,7 @@ new instance you create.  :white_flower:
  
  
 #### you can create a new instance from another instance :rage:
- Here we use the constructor property of the created instance to construct a second instance:
+ Here we use the constructor property of the created instance to construct a second instance:   :aerial_tramway:
  
  ```
     function Ninja(){}
@@ -204,10 +204,10 @@ new instance you create.  :white_flower:
    
 ```
  
- #### But what we're looking for is Prototype Chain. So that a ninja can be a person etc.
- #### So best technique for creating a prototype chain is to use an instance of an object as the other objects prototype
+#### But what we're looking for is Prototype Chain. So that a ninja can be a person etc.
+#### So best technique for creating a prototype chain is to use an instance of an object as the other objects prototype
  
- - This makes a ninja a person     
+ - This makes a ninja a person       :checkered_flag:
  
  Ex:  Ninja.prototype = new Person();           
  
