--- a/1.notesJS/10.Constructors_n_Prototypes.md
+++ b/1.notesJS/10.Constructors_n_Prototypes.md
@@ -209,7 +209,7 @@ new instance you create.  :white_flower:
  
  - This makes a ninja a person       :checkered_flag:
  
- Ex:  Ninja.prototype = new Person();           
+ Ex: :pig_nose::pig_nose::pig_nose:  Ninja.prototype = new Person();     :tada::tada::tada:      
  
  
  
