--- a/1.notesJS/21.jQuery.md
+++ b/1.notesJS/21.jQuery.md
@@ -44,57 +44,65 @@ $('li').text('something else');
 - $('#numbers, #strings');
 
 
-### selecting first and last item on a list:
+<hr>
+
+### selecting first and last item on a list:   &nbsp;  :bath:
 - $('#numbers li:first');
 - $('#numbers li:last');
 
 
-### selecting every other list item:
-- ('#numbers li:odd');
-> index for list items starts at zero
-> if 0,1,2 indexes then: only 1
+### selecting every other list item:  &nbsp; :flashlight:
+- $('#numbers li:odd');       
+> index for list items starts at zero     
+> if 0,1,2 indexes then: only 1    
 
-### selecting every even item in a list:
-- ('#numbers li:even');
-> if 0,1,2 indexes theN 0 and 2
+### selecting every even item in a list:  &nbsp; :flashlight:
+- $('#numbers li:even');      
+> if 0,1,2 indexes theN 0 and 2    
 
+<hr>
 
-### fetching text inside element:
+### fetching text inside element:  &nbsp; :hammer:
 - $('h1').text();
 
-### modify text inside element:
+### modify text inside element: &nbsp; :electric_plug:
 - $('h1').text('a new title');
 
-### run when page/dom is ready:
+### run when page/dom is ready:  &nbsp; :hourglass:
 ```
 	$(document).ready(function() {
 		$('h1').text('a new title');
 	});
 ```
 
-### filtering by traversing
+<hr>
+
+### filtering by traversing  &nbsp; :scroll:
 
 - $("#numbers").find('li');
 
-##### using first method:
+### using first method:  &nbsp; :money_with_wings:
 - $('li').first();
 
-##### using last method:
+### using last method:   &nbsp; :money_with_wings:
 - $('li').last();
+<hr>
 
-##### using next with first to find middle one:
+### using next with first to find middle one: &nbsp;   :shower:
 - $('li').first().next();
 - $(''li).last().prev();
 
-##### getting the parent element
+<hr>
+### getting the parent element &nbsp; :postbox:
 - $('li').first().parent();
+<hr>
 
-##### getting children elems:
+### getting children elems:   &nbsp;:seat:
 - $('#numbers').children();
-> here you get all direct descendants
-> you using find method you get them all.
+> here you get all direct descendants        
+> using find method you get them all.              
 
-### watching for a click event:
+### watching for a click event:   &nbsp; :mailbox_with_no_mail:
 
 ```
 	$(document).ready(function() {
