--- a/1.notesJS/21.jQuery.md
+++ b/1.notesJS/21.jQuery.md
@@ -1,4 +1,4 @@
-# <kfd>$</kfd>jQuery
+# <kbd>$</kbd>jQuery
 
 ### multiple elements selection:
 
@@ -98,8 +98,9 @@ $('li').text('something else');
 <hr>
 
 ### getting children elems:   &nbsp;:seat:
-- $('#numbers').children();
-> here you get all direct descendants        
+- $('#numbers').children();       
+
+> here you get all direct descendants            
 > using find method you get them all.              
 
 ### watching for a click event:   &nbsp; :mailbox_with_no_mail:
