--- a/1.notesJS/21.jQuery.md
+++ b/1.notesJS/21.jQuery.md
@@ -1,4 +1,5 @@
-# <kbd>$</kbd>jQ<kbd>u</kbd>er<kbd>y</kbd>  &nbsp;  :mega:
+# :mega: &nbsp;<kbd>$</kbd>jQ<kbd>u</kbd>er<kbd>y</kbd>  &nbsp;  :mega:
+
 
 ### multiple elements selection:
 
