--- a/1.notesJS/21.jQuery.md
+++ b/1.notesJS/21.jQuery.md
@@ -1,4 +1,148 @@
-# :mega: &nbsp;<kbd>$</kbd>jQ<kbd>u</kbd>er<kbd>y</kbd>  &nbsp;  :mega:
+# <kbd>$</kbd>jQ<kbd>u</kbd>er<kbd>y</kbd>  :mega:&nbsp;&nbsp;&nbsp;  `Dr. Tony Pittarese, CIS ETSU`
+
+
+#### jQuery custom mechanism for running code upon document complete load
+> common jQuery design pattern - use of an anonymous callback function
+> as a parameter
+
+
+$(document).ready(function() {
+	//code
+});  //document fully loaded
+
+#### $(selector)
+- $ use to facilitate the selecting of different parts of a web pages
+
+- 3 alternate uses:  (depending on what we feed $)
+	- $('a') ---> selects all anchors in the document.
+	- $('#myid') ---> selets the single item identified by the id myid
+	- $('.myclass') ---> selects all the items identified by the class myclass
+> Any CSS selector or tag name can be used and will return 1 or more elements as appropriate
+
+<hr>
+
+##### When an operation is applied to a collection, jQuery automatically itirates over the entire collection.
+(lets say i use one of the above selectors and it returns more than one of something, at that point by act of applying $, jquery automatically iterates over collection)
+> unlike javascript that may require some looping and or conditionals to do a similar task
+
+### add/removeClass
+> Adds/removes CSS class to the specified selector
+
+- $(selector).addClass(cssClassName);
+- $(selector).removeClass(cssClassName);
+
+Ex:
+On page fully loaded, adds a class to the last paragraph of document
+> `:last` --> is a modifyier associated with the paragraph tag
+
+```
+	$(document).ready(function() {
+		$('p:last').addClass('highlight');
+	});
+```
+##### `note`: have not been there `modifier :last` jQuery would it have run `automatic iteration`, and `add` a `class` of `highlight` to `every p` element in document.
+
+<hr>
+
+### jQuery Selector Extensions to CSS
+
+ several custom extensions that can be used as selectors
+[jQuery Selectors](http://docs.jquery.com/Selectors)
+
+Ex.  "*"  selects all elements
+
+- every attribute Not equal to something
+- every attribute equals selector [name='value']
+- :checkbox  selects all elements of type checkbox
+- :gt() selects all elements at an index greater than index..
+- :has() selects elems which contain at least one elem matching ..
+etc..etc..etc..    `point made` => ability to come up with pretty complex selections.
+
+Ex: using :odd modifier to highlight every other row (3-lines-of-code)
+
+```
+	$(document).ready(function() {
+		$('tr:odd').addClass('highlight');
+	});
+```
+
+
+```
+	$(document).ready(function() {
+		$('tr:odd').addClass('highlight');
+	    $('td:contains("o")').addClass('highlight2);
+    });
+```
+> here starts by applying class highlight to every odd row in document.
+> then looks for all tds containing the letter 'o' and applies class highlight2
+
+### jQuery event handling
+attach a function to events: blur, change, click, focus, mouseover etc
+
+[jQuery Events](http://api.jquery.com/category/events)
+
+```
+	$(selector).click(function() {
+		//function body
+	});
+```
+> Passing this event handler this anonymous function and when this particular selector has this particular action apply to it, then my function will be trigger and whatever specified done
+
+### ++*Within an Event handling function*++ `$(this)` references the ==element the action occurred with==.
+
+In jQuery doing:
+
+ $(this)     ==> that would enable me to capture the item the element occurred with - **++the item the user interacted with++**
+
+Ex. wanna target td on a table so i could do:
+
+$('td')  as my selector  ==> so i know this is what i'm referencing
+
+```
+	$('td').click(function() {
+		//so user could click a table cell and that will fire
+		//an anonymous function
+        //highlight a table cell(s)
+	});
+```
+But if the intent is to highlight ONLY THAT Particular table cell then:
+```
+      $(this)
+```
+
+Ex:
+```
+	$(document).ready(function() {
+    	$('td:odd').addClass('highlight');
+        $('td').click(function() {
+			//adds highlight2 class to that particular cell
+        	$(this).addClass('highlight2');
+        });
+
+    });
+```
+
+
+```
+	$(document).ready(function() {
+    	$('td:odd').addClass('highlight');
+        $('td').mouseover(function() {
+			//adds highlight2 class to that particular cell
+        	$(this).addClass('highlight2');
+        });
+
+    });
+```
+
+
+
+
+
+
+
+
+
+
 
 
 ### multiple elements selection:
