--- a/1.notesJS/21.jQuery.md
+++ b/1.notesJS/21.jQuery.md
@@ -1,5 +1,5 @@
 # :mega: <kbd>$</kbd>jQ<kbd>u</kbd>er<kbd>y</kbd>  :mega:&nbsp;&nbsp;&nbsp;  
-> `Dr. Tony Pittarese, CIS ETSU`
+> `Dr. Tony Pittarese, CIS ETSU.EDU`
 
 #### jQuery custom mechanism for running code upon document complete load
 > common jQuery design pattern - use of an anonymous callback function
