--- a/1.notesJS/21.jQuery.md
+++ b/1.notesJS/21.jQuery.md
@@ -1,22 +1,23 @@
 # :mega: <kbd>$</kbd>jQ<kbd>u</kbd>er<kbd>y</kbd>  :mega:&nbsp;&nbsp;&nbsp;  
 > `Dr. Tony Pittarese, CIS ETSU.EDU`
 
-#### jQuery custom mechanism for running code upon document complete load
+<br/>
+#### jQuery custom mechanism for running code upon document complete load &nbsp; :japanese_ogre:
 > common jQuery design pattern - use of an anonymous callback function
 > as a parameter
 
 
-$(document).ready(function() {
-	//code
-});  //document fully loaded
+$(document).ready(function() {       
+	//code      
+});  //document fully loaded     
 
-#### $(selector)
+#### $(selector) &nbsp; :facepunch:
 - $ use to facilitate the selecting of different parts of a web pages
 
-- 3 alternate uses:  (depending on what we feed $)
-	- $('a') ---> selects all anchors in the document.
-	- $('#myid') ---> selets the single item identified by the id myid
-	- $('.myclass') ---> selects all the items identified by the class myclass
+- **3 alternate uses**:  (depending on what we feed $)   &nbsp; :point_left:
+	- **$('a')** ---> selects all anchors in the document.
+	- **$('#myid')** ---> selets the single item identified by the id myid
+	- **$('.myclass')** ---> selects all the items identified by the class myclass
 > Any CSS selector or tag name can be used and will return 1 or more elements as appropriate
 
 <hr>
