--- a/1.notesJS/21.jQuery.md
+++ b/1.notesJS/21.jQuery.md
@@ -17,13 +17,15 @@ $(document).ready(function() {
 - **3 alternate uses**:  (depending on what we feed $)   &nbsp; :point_left:
 	- **$('a')** ---> selects all anchors in the document.
 	- **$('#myid')** ---> selets the single item identified by the id myid
-	- **$('.myclass')** ---> selects all the items identified by the class myclass
+	- **$('.myclass')** ---> selects all the items identified by the class myclass            
+	
 > Any CSS selector or tag name can be used and will return 1 or more elements as appropriate
 
 <hr>
 
-##### When an operation is applied to a collection, jQuery automatically itirates over the entire collection.
-(lets say i use one of the above selectors and it returns more than one of something, at that point by act of applying $, jquery automatically iterates over collection)
+#### When an operation is applied to a collection, jQuery automatically iterates over the entire collection.  &nbsp;:cop:
+(lets say i use one of the above selectors and **it returns more than one of something**, at that point by act of applying $, jquery automatically iterates over collection)
+
 > unlike javascript that may require some looping and or conditionals to do a similar task
 
 ### add/removeClass
