--- a/1.notesJS/21.jQuery.md
+++ b/1.notesJS/21.jQuery.md
@@ -28,11 +28,11 @@ $(document).ready(function() {
 
 > unlike javascript that may require some looping and or conditionals to do a similar task
 
-### add/removeClass
+### add/removeClass &nbsp; :postal_horn:
 > Adds/removes CSS class to the specified selector
 
-- $(selector).addClass(cssClassName);
-- $(selector).removeClass(cssClassName);
+- $(selector).addClass(cssClassName);     :key:
+- $(selector).removeClass(cssClassName);  :key:
 
 Ex:
 On page fully loaded, adds a class to the last paragraph of document
@@ -47,9 +47,9 @@ On page fully loaded, adds a class to the last paragraph of document
 
 <hr>
 
-### jQuery Selector Extensions to CSS
+### jQuery Selector Extensions to CSS    &nbsp; :lock:
 
- several custom extensions that can be used as selectors
+ several custom extensions that can be used as selectors    &nbsp;:bulb:
 [jQuery Selectors](http://docs.jquery.com/Selectors)
 
 Ex.  "*"  selects all elements
